:tada: added planet generation

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,8 +3,8 @@
     padding 0
     
 
-html,body,canvas
-    position fixed
+html,body
+    position relative
     top 0
     left 0
     width 100%
