--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -3,9 +3,21 @@
     padding 0
     
 
-html,body
+html,body,canvas
     position relative
     top 0
     left 0
     width 100%
     height 100%
+    overflow-x hidden
+
+.floating-ico
+    position fixed
+    top 20px
+    left 20px 
+    background-image url('../img/assets/logo.png')
+    background-repeat no-repeat 
+    background-size cover
+    width 50px
+    height 50px
+    z-index 100
