--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -9,7 +9,8 @@ html,body,canvas
     left 0
     width 100%
     height 100%
-    overflow-x hidden
+    overflow hidden
+    color black
 
 .floating-ico
     position fixed
