--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -10,11 +10,12 @@ html,body,canvas
     width 100%
     height 100%
     overflow hidden
+    font-family 'Muli', sans-serif
     color black
 
 .floating-ico
     position fixed
-    top 20px
+    top 30px
     left 20px 
     background-image url('../img/assets/logo.png')
     background-repeat no-repeat 
@@ -22,3 +23,17 @@ html,body,canvas
     width 50px
     height 50px
     z-index 100
+.hello-text 
+    position fixed 
+    z-index 100
+    color white
+    top 20px
+    left 90px 
+    font-size 2em
+.hello-command
+    position fixed 
+    z-index 100
+    color white
+    top 60px
+    left 90px 
+    font-size 1em
