--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -13,27 +13,24 @@ html,body,canvas
     font-family 'Muli', sans-serif
     color black
 
-.floating-ico
-    position fixed
-    top 30px
-    left 20px 
-    background-image url('../img/assets/logo.png')
-    background-repeat no-repeat 
-    background-size cover
-    width 50px
-    height 50px
-    z-index 100
 .hello-text 
     position fixed 
     z-index 100
     color white
     top 20px
-    left 90px 
+    left 20px 
     font-size 2em
 .hello-command
     position fixed 
     z-index 100
     color white
     top 60px
-    left 90px 
+    left 20px 
+    font-size 1em
+.link-read
+    position fixed 
+    z-index 100
+    color white
+    top 85px
+    left 20px 
     font-size 1em
