:tada: added lots & lots

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -12,6 +12,7 @@ html,body,canvas
     overflow hidden
     font-family 'Muli', sans-serif
     color black
+    user-select none
 
 .hello-text 
     position fixed 
